--- a/index.html
+++ b/index.html
@@ -63,13 +63,10 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="images/littlelink.svg" class="avatar" srcset="images/gt-block-logo.svg 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">Glenn Twiggs</h1>
-
-        <!-- Short Bio -->
-        <p>Projects</p>
 
         <!--
 
