remove radius on icon
Add link for On Exactitude...

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
         -->
 
-        <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/gt-block-logo.svg 2x" alt="">
+        <!-- Logo -->
+        <img src="images/gt-block-logo.svg" class="avatar" srcset="images/gt-block-logo.svg 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">Glenn Twiggs</h1>
@@ -96,6 +96,9 @@
           This can improve the experience for assistive technology users by hiding what is essentially duplicated
 
         -->
+
+        <!-- Website -->
+        <a class="button button-default" href="https://www.glenntwiggs.com/on-exactitude-in-science/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">On Exactitude in Science</a><br>
 
         <!-- Website -->
         <a class="button button-default" href="https://glenntwiggs.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">glenntwiggs.com</a><br>
