add link addresses

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
+  <title>GLENN TWIGGS // Links</title>
   <meta name="description" content="https://littlelink.io">
   <meta name="author" content="Seth Cottle">
 
@@ -98,25 +98,25 @@
         -->
 
         <!-- Website -->
-        <a class="button button-default" href="https://www.glenntwiggs.com/on-exactitude-in-science/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">On Exactitude in Science</a><br>
+        <a class="button button-default" href="https://www.glenntwiggs.com/on-exactitude-in-science/" target="_blank" rel="noopener" role="button">On Exactitude in Science</a><br>
 
         <!-- Website -->
-        <a class="button button-default" href="https://glenntwiggs.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">glenntwiggs.com</a><br>
+        <a class="button button-default" href="https://glenntwiggs.com" target="_blank" rel="noopener" role="button">GLENN TWIGGS.com</a><br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
+        <a class="button button-instagram" href="https://www.instagram.com/glenntwiggs/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
 
         <!-- Mastodon -->
-        <a class="button button-mastodon" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/mastodon.svg" alt="">Mastodon</a><br>
+        <a class="button button-mastodon" href="https://urbanists.social/@gtwiggs" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/mastodon.svg" alt="">Mastodon</a><br>
 
         <!-- Vimeo -->
-        <a class="button button-vimeo" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/vimeo.svg" alt="">Vimeo</a><br>
+        <a class="button button-vimeo" href="https://vimeo.com/gtwiggs" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/vimeo.svg" alt="">Vimeo</a><br>
 
         <!-- Generic Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email Us</a><br>
+        <a class="button button-default" href="mailto:glenntwiggsprojects@gmail.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email Us</a><br>
 
         <!-- GitHub -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/github.svg" alt="">GitHub</a><br>
+        <a class="button button-github" href="https://github.com/gtwiggs/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/github.svg" alt="">GitHub</a><br>
 
         <br>
         <!-- 
