--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         <!-- Vimeo -->
         <a class="button button-vimeo" href="https://vimeo.com/gtwiggs" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/vimeo.svg" alt="">Vimeo</a><br>
 
-        <!-- Generic Email -->
-        <a class="button button-default" href="mailto:glenntwiggsprojects@gmail.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email Us</a><br>
-
         <!-- GitHub -->
         <a class="button button-github" href="https://github.com/gtwiggs/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/github.svg" alt="">GitHub</a><br>
+
+        <!-- Generic Email -->
+        <a class="button button-default" href="mailto:glenntwiggsprojects@gmail.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email</a><br>
 
         <br>
         <!-- 
@@ -125,7 +125,8 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a></p>
+        <p>Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
 
       </div>
     </div>
