--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>GLENN TWIGGS // Links</title>
   <meta name="description" content="https://littlelink.io">
   <meta name="author" content="Seth Cottle">
+  <link rel="stylesheet" href="https://use.typekit.net/ffc0tqw.css">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -66,7 +67,7 @@
         <img src="images/gt-block-logo.svg" class="avatar" srcset="images/gt-block-logo.svg 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">Glenn Twiggs</h1>
+        <h1 role="heading">GLENN TWIGGS</h1>
 
         <!--
 
@@ -125,8 +126,9 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a></p>
-        <p>Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a>
+        <br>
+        Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
 
       </div>
     </div>
