--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>GLENN TWIGGS // Links</title>
   <meta name="description" content="https://littlelink.io">
   <meta name="author" content="Seth Cottle">
+  <meta name="author" content="Glenn Twiggs">
+
+  <!-- Futura PT -->
   <link rel="stylesheet" href="https://use.typekit.net/ffc0tqw.css">
 
   <!-- Mobile Specific Metas
@@ -25,7 +28,7 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-    <link rel="stylesheet" href="css/skeleton-auto.css">
+    <link rel="stylesheet" href="css/skeleton-dark.css">
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
@@ -67,7 +70,10 @@
         <img src="images/gt-block-logo.svg" class="avatar" srcset="images/gt-block-logo.svg 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">GLENN TWIGGS</h1>
+        <h1 role="heading">Glenn Twiggs</h1>
+
+        <!-- Short Bio -->
+        <p>Chaos is in the world. Photography is only an illusion of control. Breathe.</p>
 
         <!--
 
@@ -102,7 +108,7 @@
         <a class="button button-default" href="https://www.glenntwiggs.com/on-exactitude-in-science/" target="_blank" rel="noopener" role="button">On Exactitude in Science</a><br>
 
         <!-- Website -->
-        <a class="button button-default" href="https://glenntwiggs.com" target="_blank" rel="noopener" role="button">GLENN TWIGGS.com</a><br>
+        <a class="button button-default" href="https://glenntwiggs.com" target="_blank" rel="noopener" role="button">glenntwiggs.com</a><br>
 
         <!-- Instagram -->
         <a class="button button-instagram" href="https://www.instagram.com/glenntwiggs/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
